k8s/base/ciam/ping-federate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-federate
spec:
  selector:
    matchLabels:
      app: ping-federate
  replicas: 1
  template:
    metadata:
      labels:
        app: ping-federate
    spec:
      containers:
        - image: acrciamdevuanc67lyf.azurecr.io/pingfederate:latest
          name: ping-federate
          volumeMounts:
            - name: pingfederate-license-volume
              mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
              subPath: pingfederate.lic
          ports:
            - containerPort: 9999
            - containerPort: 9031
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: 1000m
      volumes:
        - name: pingfederate-license-volume
          secret:
            secretName: pingfederate.lic
            defaultMode: 420
